# check-contribution-action

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  action.yml  entrypoint.sh  pyproject.toml
.github/scripts/integration/: README.md  cleanup_run.sh  common.sh  run_case.sh
.github/workflows/: ci.yml  integration-tests.yml  release.yml
src/check_contribution_action/: __init__.py  check_for.py  close_triggers.py  commits.py  config.py  failure_reasons.py  git_commits.py  main.py  models.py  pr_manager.py  skip_users_file.py
src/check_contribution_action/checks/: __init__.py  base.py  issue.py  sign_off.py  signature.py
tests/: conftest.py  test_close_triggers.py  test_commits.py  test_config.py  test_git_commits.py  test_issue_check.py  test_main.py  test_models.py  test_pr_manager.py  test_sign_off_check.py  test_signature_check.py  test_skip_users_file.py
tests/fixtures/commits/: case_insensitive_sign_off.txt  signed_gpg.txt  signed_ssh.txt  unsigned_no_sign_off.txt  unsigned_with_sign_off.txt
