[tool.poetry]
name = "check-contribution-action"
version = "0.1.3"
description = "GitHub Action to validate contribution requirements"
authors = ["arkid15r <arkid15r@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "check_contribution_action", from = "src"}]

[tool.poetry.dependencies]
python = "^3.14"
PyGithub = "2.9.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3,<10.0.0"
pytest-cov = "^4.1.0"
pre-commit = "^4.5.0"
ruff = "^0.11.12"

[tool.poetry.scripts]
check-contribution-action = "check_contribution_action.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["check_contribution_action"]
force-sort-within-sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "venv/*", ".venv/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
